tooling/nargo_cli/tests/snapshots/execution_success/break_and_continue/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
unconstrained fn main() {
    let mut count: i32 = 0;
    for i in 0..10 {
        if i == 2 { continue; };
        if i == 5 { break; };
        count = count + 1;
    }
    assert(count == 4);
}
